--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,6 @@
-$color-primary: #13405D;
-$color-alt: #BDDCF0;
-$color-text: #4392c6;
+$color-primary: #5F6FED;
+$color-alt: #2AD6BC;
+$color-text: #1A1C37;
+$color-input: #F7F7F9;
 
 $gutter: 1rem;
