--- a/src/components/Messages/styles.scss
+++ b/src/components/Messages/styles.scss
@@ -2,6 +2,7 @@
 
 .messages {
   padding: v.$gutter * 2;
+  background-color: #fff;
 }
 
 .message {
@@ -9,11 +10,18 @@
     font-size: 0.8em;
     margin-bottom: v.$gutter;
     margin-left: v.$gutter;
+    padding: v.$gutter / 2;
+    color: #fff;
+    background-color: v.$color-primary;
+    width: 100px;
+    border-radius: 50px 50px 50px 0;
+    box-shadow: -3px 7px 9px 0px rgb(213, 213, 213);
   }
   &__content {
     background-color: #fff;
-    padding: v.$gutter * 1.5;
-    border-radius: 30px;
+    padding: v.$gutter;
+    border-radius: 4px 20px 20px 20px;
+    box-shadow: -3px 5px 20px -1px rgb(213, 213, 213);
     color: v.$color-alt;
     display: inline-block;
     min-width: 150px;
