--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,8 +2,8 @@
 @use 'vars' as v;
 
 body {
-  font-family: sans-serif;
-  background-color: v.$color-primary;
+  font-family: 'Roboto', sans-serif;
+  background-color: #fff;
 }
 
 /* 
