axios, middlewares and auth

--- a/src/components/Field/styles.scss
+++ b/src/components/Field/styles.scss
@@ -9,7 +9,7 @@
     padding: .5rem;
   }
   &__submit {
-    background-color: v.$color-settings;
+    background-color: v.$color-alt;
     color: white;
   }
   &__label {
